--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.2",
-    "jest": "29.7.0",
+    "jest": "^29.7.0",
     "jest-cli": "29.7.0",
     "prettier": "^2.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5"
+  }
 }
